test/e2e/manifest/testNetworkPolicy/np_ipv6_ipblock.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: np-ipv6-ipblock
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - ipBlock:
        cidr: 2001:db8::/32
        except:
        - 2001:db8:1::/48
    ports:
    - protocol: TCP
      port: 80
  egress:
  - to:
    - ipBlock:
        cidr: fd00::/64
    ports:
    - protocol: TCP
      port: 443
