test/e2e/manifest/testNetworkPolicy/np_multiple_in.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: test-np-multiple-in
spec:
  ingress:
  - ports:
    - port: 80
    from:
    - podSelector:
        matchExpressions:
          - key: tier
            operator: In
            values: ["frontend", "backend"]
          - key: tier
            operator: In
            values: ["backend", "db"]
  podSelector:
    matchLabels:
      nptcp1: tcp1
  policyTypes:
  - Ingress
