test/e2e/manifest/testNetworkPolicy/np_simple.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: np-simple
  namespace: e2e-network-policy
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - ipBlock:
        cidr: 172.18.0.0/16
        except:
        - 172.18.1.0/24
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: demotest
    - podSelector:
        matchLabels:
          role: frontend
    ports:
    - protocol: TCP
      port: 800
    - protocol: UDP
      port: 12340
      endPort: 12350
  egress:
  - to:
    - namespaceSelector: {}
      podSelector:
        matchLabels:
          role: backend
    ports:
    - protocol: UDP
      port: 5978
